app/assets/stylesheets/pages/_dog_index.scss
.dog-index {
  min-height: calc(100vh - 163.97px)
}

.cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 16px;
}

#map {
  height: 100vh;
  position: sticky;
  top: 0;
  margin-left: 40px;
}


.card-dog {
  background-size: cover;
  background-position: center;
  width: 250px;
  // display: flex;
  justify-content: center;
  align-items: center;
  // color: white;
  font-size: 24px;
  font-weight: bold;
  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
  border-radius: 5px;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  background-color: white;
}

.photo-dog {
  background-size: cover;
  background-position: center;
  height: 200px;
  width: 100%;
}

.dog-card-link {
  height: 100%;
  width: 100%;
  // display: flex;
  // flex-direction: column;
  color: black;
  &:hover {
    text-decoration: none;
    color: orange;
  }
}



.name-dog {
  font-size: 25px;
}

// Smallest device
@media (min-width: 100px) and (max-width: 575px) {
  .cards {
    grid-template-columns: 1fr;
  }
  .mapboxgl-popup-content {
    width: 100px;
  }
}

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {
  .cards {
    grid-template-columns: 1fr;
  }
  .mapboxgl-popup-content {
    width: 200px;
  }
}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {
  .cards {
    grid-template-columns: 1fr 1fr;
  }
}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) {
  .cards {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {
  .cards {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

.search-features {
  // display: flex;
}

.search-box {
  width: 40%;
}

.price-range {
  width: 49%;
}

.noUi-connect {
  background-color: #ed7e3a !important;
}

